     headers are not sent.
   trust_id_outbound=yes - RPID/PAI headers are applied with the full remote
     party information in tact even for prohibited callingpres information.
     In the case of PAI, a Privacy: id header will be appended for prohibited
     calling information to communicate that the private information should
     not be relayed to untrusted parties.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12.1.0 to Asterisk 12.2.0 ------------
------------------------------------------------------------------------------

Applications
--------------------------
 * Record application now has an option 'o' which allows 0 to act as an exit
   key setting the RECORD_STATUS variable to 'OPERATOR' instead of 'DTMF'
 * Monitor() - A new option, B(), has been added that will turn on a periodic
   beep while the call is being recorded.

Functions
--------------------------
 * A new function was added: PERIODIC_HOOK.  This allows running a periodic
   dialplan hook on a channel.  Any audio generated by this hook will be
   injected into the call.

ChanSpy
--------------------------
 * ChanSpy now accepts a channel uniqueid or a fully specified channel name
   as the chanprefix parameter if the 'u' option is specified.

ConfBridge
--------------------------
 * CONFBRIDGE dialplan function is now capable of creating/modifying dynamic
   conference user menus.

 * CONFBRIDGE dialplan function is now capable of removing dynamic conference
   menus, bridge settings, and user settings that have been applied by the
   CONFBRIDGE dialplan function.

 * The ConfBridge dialplan application now sets a channel variable,
   CONFBRIGE_RESULT, upon exiting. This variable can be used to determine
   how a channel exited the conference.

 * Added conference user option 'announce_join_leave_review'. This option
   implies 'announce_join_leave' with the added effect that the user will